# door-lock-detector

./: .env  README.md  camera-config.yaml  groundlight-app.yaml  pyproject.toml
app/: main.py
